<resources>
    <string name="app_name">Github Browser</string>
    <string name="repo_label">Track your favourite repo</string>
    <string name="add_repo_label">ADD NOW</string>
    <string name="repo_name_label">Repository Name</string>
    <string name="repo_desc_label"><![CDATA[private UserRemoteDataSource ();       UserRepository userRepository = new UserRepository(localDataSource, remoteDataSource)]]></string>
    <string name="add_repo_title">Add Repo</string>
    <string name="owner_label">Owner / Organization</string>
    <string name="repo_name">Repo Name</string>
    <string name="add">Add</string>
    <string name="text">""</string>
    <string name="date_label">10 Mar 21</string>
    <string name="string_commit_text">a30efa</string>
    <string name="commit_msg">Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Commit Comm</string>
    <string name="detail_fragment_title">Details</string>
    <string name="commmit_fragmet_title">Commits</string>
    <string name="del_label">Delete Repo</string>
    <string name="view_repo">View</string>
    <string name="repo_not_found">Repo Not Found</string>
    <string name="err_enter_name">Enter name</string>
    <string name="err_enter_owner">Enter owner/organization</string>
    <string name="alert_dialog_del_title">Delete</string>
    <string name="alert_del_text">Are you sure you want to del this repository?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="recycler_view_msg">There is no data to show.</string>
    <string name="network_err">Please chect your network connection</string>
    <string name="share">Share</string>
</resources>