<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".fragment.AddRepoFragment" >

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:id="@+id/owner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/owner_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="100"
        android:background="@drawable/edit_text_bkg"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/owner_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:id="@+id/repo_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/owner_value"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/repo_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:maxLength="10"
        android:background="@drawable/edit_text_bkg"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/repo_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"
        android:contentDescription="@string/add_repo_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>