<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RepoDetailFragment">

    <TextView
        android:id="@+id/repo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repo_name"
        android:textStyle="bold"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/repo_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repo_label"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_margin="8dp"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintTop_toBottomOf="@id/repo_name"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view_msg"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/repo_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Theme.GithubBrowser.MsgTextAppearance"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repo_desc"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>